Support consuming json stream and ndjson in REST Client Reactive
refs #21442